--- a/pages/404.md
+++ b/pages/404.md
@@ -1,12 +1,12 @@
 ---
-layout: page
+layout: page-fullwidth
 permalink: /404.html
 title: Missing page
 subheadline: HTTP 404
 ---
 Please try to start over on the [home page]({{ site.baseurl }}/),
-or to **search** below.
+or search below.
 if you can't find what you're looking for,
-please [get in touch]({{ site.baseurl }}/contact/).
+please [get in touch]({{site.baseurl}}/contact/).
 
 {% include google_search %}
