renamed all includes with html extension

--- a/pages/404.md
+++ b/pages/404.md
@@ -9,4 +9,4 @@ or search below.
 if you can't find what you're looking for,
 please [get in touch]({{site.baseurl}}/contact/).
 
-{% include google_search %}
+{% include google_search.html %}
