Notice about NGS course

--- a/_posts/2016/02/2016-02-14-ngs-course-2016.md
+++ b/_posts/2016/02/2016-02-14-ngs-course-2016.md
@@ -19,6 +19,8 @@ More information,
 or to register,
 please see [http://bioinformatics.msu.edu/ngs-summer-course-2016](http://bioinformatics.msu.edu/ngs-summer-course-2016).
 
+*Note: if you are running a course that might be of interest to our community, please let us know.*
+
 ----
 
 This intensive two week summer course will introduce attendees with
