--- a/_posts/2016/04/2016-04-03-AMY-release-151.md
+++ b/_posts/2016/04/2016-04-03-AMY-release-151.md
@@ -14,7 +14,7 @@ workshop management tool.  This release is special because:
 2. we had a number of submissions from prospect
    [Google Summer of Code 2016](https://summerofcode.withgoogle.com/) students.
 
-GSOC students that submitted fixes or new features to AMY:
+GSoC students that submitted fixes or new features to AMY:
 
 * [Shubham Singh][] added "Notes" field to instructor profile update form
 * [Nikhil Verma][] found and fixed "List duplicates" page error when no
@@ -25,7 +25,7 @@ GSOC students that submitted fixes or new features to AMY:
 Additionally [Nikhil Verma][] is working on getting certificates to generate
 from within [AMY][], but this will probably land in [v1.5.2][].
 
-Apart from GSOC students we've had a number of contributions from our very
+Apart from GSoC students we've had a number of contributions from our very
 own Maneesha Sane, Greg Wilson and Piotr Banaszkiewicz.
 
 If you want to read more about changes introduced in [v1.5.1][], here's
