Fix: "prospect"→"prospective", GSoC shortname

--- a/_posts/2016/04/2016-04-03-AMY-release-151.md
+++ b/_posts/2016/04/2016-04-03-AMY-release-151.md
@@ -11,8 +11,9 @@ We're very pleased to announce the newest ([v1.5.1][]) release of [AMY][], our
 workshop management tool.  This release is special because:
 
 1. it contains more bugfixes than new features
-2. we had a number of submissions from prospect
-   [Google Summer of Code 2016](https://summerofcode.withgoogle.com/) students.
+2. we had a number of submissions from prospective
+   [Google Summer of Code 2016](https://summerofcode.withgoogle.com/) (GSoC)
+   students.
 
 GSoC students that submitted fixes or new features to AMY:
 
