--- a/_posts/2016/06/2016-06-31-brazil.md
+++ b/_posts/2016/06/2016-06-31-brazil.md
@@ -31,11 +31,11 @@ to help answering the questions.
 workshop that we run in Florianópolis
 with more than one year between each.
 
-Our 20 seats sold out in a few days (we didn't charge anything) but only four students attended all the sessions making this the workshop in Brazil with the smallest number of attendees. The low number of attendees can be due our workshop ran at the same time of others activities of [SciPy Latin America 2016](http://scipyla.org/conf/2016/) but I believe that the main reason was the missing of a local champion that motivate people to attend the workshop (in 2014 we had Diego Barneche Rosado).
+Our 20 seats sold out in a few days (we didn't charge anything) but only four students attended all the sessions making this the workshop in Brazil with the smallest number of attendees. The low number of attendees can be due our workshop running at the same time as others activities of [SciPy Latin America 2016](http://scipyla.org/conf/2016/) but I believe that the main reason was the missing of a local champion to motivate people to attend the workshop (in 2014 we had Diego Barneche Rosado).
 
 ## Workshop in Campinas
 
-[This](https://rgaiacs.github.io/2016-05-23-unicamp/) also was the [second](https://r-gaia-cs.github.io/2015-06-04-unicamp/) workshop that we run in Campinas. The first one was an remote workshop last year.
+[This](https://rgaiacs.github.io/2016-05-23-unicamp/) was the [second](https://r-gaia-cs.github.io/2015-06-04-unicamp/) workshop that we run in Campinas. The first one was an remote workshop last year.
 
 We had 40 seats available but we sold less than 20. At this workshop we charged R$100.00 (that at the time was something around US$25.00) per seat. [A friend complained that the ticket was expensive](https://twitter.com/mariojmaaz/status/720009962085294082) but the workshops aren't free of costs and if the host isn't covering the costs we need to charge the attendees.
 
@@ -43,13 +43,13 @@ Not having a full room helped a lot when we needed to find another one since the
 
 ## Workshop in São Paulo
 
-[This](https://rgaiacs.github.io/2016-05-27-ccsl/) was our forth workshop in São Paulo in the last three years making the place in Brazil with more workshops so far. All this four workshops had the support of [The FLOSS Competence Center](http://ccsl.usp.br/) and I hope they will continue to support us.
+[This](https://rgaiacs.github.io/2016-05-27-ccsl/) was our forth workshop in São Paulo in the last three years making the place in Brazil with most workshops so far. All this four workshops had the support of [The FLOSS Competence Center](http://ccsl.usp.br/) and I hope they will continue to support us.
 
-The 18 seats for this workshop sold out in a few days and we had a full room on all the sessions. This probably happend because our history of workshop lots of positive feedbacks. On the previous events we had a waiting list with the double of our capacity but it didn't happen this time because I did a very poor advertisement of this workshop that happened over a holiday.
+The 18 seats for this workshop sold out in a few days and we had a full room on all the sessions. This probably happend because our history of workshop lots of positive feedbacks. At previous events we had a waiting list filled to double the capacity, this time we did not because of less advertisement and the workshop was scheduled during a holiday.
 
 ## Learners feedback
 
-The feedback that we receive on all three workshops were similar. The learners loved the friend and welcome learning environment that we provided, adquired and improved skills but also complained that the workshop could be longer than two days and be offer more times over the year. 
+The feedback that we received on all three workshops were similar. The learners loved the friendly and welcoming learning environment that we provided, acquired and improved skills but also commented that the workshop could be longer than two days and be offer more times over the year. 
 
 ## Pedagogical exchange
 
@@ -69,7 +69,7 @@ We are seeking financial sponsors to promote the First Brazilian [Software Carpe
 
 ## Answers
 
-Backing to the questions at the begin of this post,
+Coming back to the questions at the begin of this post,
 some possible answers:
 
 - how do we advertize our workshops?
@@ -88,7 +88,7 @@ some possible answers:
 
   I also don't have a answer for this one yet.
   And the lack of funding on the current year budget makes this more challenge.
-  **But keep in mind that the Software Carpentry Foundation can provide you will letter of support for grant opportunities.**
+  **But keep in mind that the Software Carpentry Foundation can provide you with letter of support for grant opportunities.**
 
 ## Acknowledge
 
