Unifying URLs for instructor training materials.
1.  Modifying configuration to have one variable for this.
2.  Updating all references (current and past) to use that variable.

--- a/_posts/2016/05/2016-05-31-review.md
+++ b/_posts/2016/05/2016-05-31-review.md
@@ -8,7 +8,7 @@ category: ["Community"]
 ---
 
 ##Highlights
-* The [2016 Steering Committee's first bimonthly report]({{page.baseurl}}/blog/2016/05/first-tertile.html) provides an overview on happenings in the community in the past two months. The [joint partnership agreement]({{page.baseurl}}/scf/join/) with Data Carpentry is now available, together with a [written version of the instructor training model](http://swcarpentry.github.io/instructor-training/), a [call for subcommittees and task forces]({{page.baseurl}}/blog/2016/04/subcommittes-taskforces.html), and an [official space on Facebook](https://www.facebook.com/groups/17942228448/). Make sure to read the [Code of Conduct]({{page.baseurl}}/conduct) in support of our welcoming, friendly, and diverse community.
+* The [2016 Steering Committee's first bimonthly report]({{page.baseurl}}/blog/2016/05/first-tertile.html) provides an overview on happenings in the community in the past two months. The [joint partnership agreement]({{page.baseurl}}/scf/join/) with Data Carpentry is now available, together with a [written version of the instructor training model]({{site.training_url}}), a [call for subcommittees and task forces]({{page.baseurl}}/blog/2016/04/subcommittes-taskforces.html), and an [official space on Facebook](https://www.facebook.com/groups/17942228448/). Make sure to read the [Code of Conduct]({{page.baseurl}}/conduct) in support of our welcoming, friendly, and diverse community.
 
 ##Instructor training
 * The results from the [first analysis of instructor training data]({{page.baseurl}}/blog/2016/05/first-analysis.html) is now available. Also see the [discussion](http://lists.software-carpentry.org/pipermail/discuss/2016-May/004509.html) on the discuss mailing list. If you have a [suggestion for further analysis]({{page.baseurl}}/blog/2016/05/looking-for-a-model.html), please share your thoughts!
