Getting the image file somewhere visible

--- a/_posts/2016/08/2016-08-15-bug-bbq.md
+++ b/_posts/2016/08/2016-08-15-bug-bbq.md
@@ -26,7 +26,7 @@ of the Bug BBQ alone, we observed a tremendous increase in the number of
 submitted, merged and rejected pull requests per day compared to the previous
 month. *Analysis courtesy of Bill Mills.*
 
-![alt tag](bbqPulls.png)
+![Pull requests during Bug BBQ]({{site.filesurl}}/2016/08/bbqPulls.png)
 
 The new version (2016.06) of the lessons have now been published, and details
 about who contributed, and citations can be found [here](http://software-carpentry.org/blog/2016/07/publishing-lessons.html). We
