_posts: Consolidate categories
Deduplicate [1] somewhat with the following changes:

* "Sponsors" -> "Funding"
* "Support" -> "Funding"
* "Training" -> "Instructor Training"
* "Translations" -> "Translation"
* "Workshop" -> "Workshops"
* "community" -> "Community"
* "education" -> "Education"
* "instructor-training" -> "Instructor Training"
* "steering committee" -> "Steering Committee"
* "surveys" -> "Surveys"
* "workshops" -> "Workshops"

[1]: https://software-carpentry.org/blog/categories/

--- a/_posts/2016/06/2016-06-31-brazil.md
+++ b/_posts/2016/06/2016-06-31-brazil.md
@@ -4,7 +4,7 @@ authors: ["Raniere Silva"]
 title: "Three workshops in Brazil"
 date: 2016-06-31
 time: "10:00:00"
-category: ["workshops"]
+category: ["Workshops"]
 ---
 In Brazil, like in many other countries that we are starting to run workshops,
 there are many open questions that we need to answer such as
