fixing typos and adding a link

--- a/_posts/2017/06/2017-06-06-bw_cdl.md
+++ b/_posts/2017/06/2017-06-06-bw_cdl.md
@@ -45,11 +45,11 @@ ResBaz is a three-day research event to skill up graduate students and early car
 whether that be in a discipline such as ecoscience or around tools such as R. 
 From one event in 2015, ResBaz grew to ten in 2016 and 14 in 2017 in places as distant as Oslo, Tucson, 
 Christchurch in New Zealand and Cuenca in Ecuador. Software Carpentry workshops are always a key part of ResBaz 
-festivals, and ResBaz events are a great way to atrract ,more people to Software and Data Carpentry. Along with 
-Sam Hames and Nicholas Hamilton, I started a weekly Hacky Hour drop in advice sesions for researchers at The 
+festivals, and ResBaz events are a great way to attract more people to Software and Data Carpentry. Along with 
+Sam Hames and Nicholas Hamilton, I started a weekly Hacky Hour drop in advice sessions for researchers at The 
 University of Queensland.
 
-In June 2016, I organised a sprint to update and extend the Library Carpentry material created by Dr James Baker and 
+In June 2016, I organised a sprint to update and extend the [Library Carpentry[(http://librarycarpentry.github.io) material created by Dr James Baker and 
 others in the UK. This was part of the annual 2-day Mozilla Science Lab Global Sprint. More than 20 people in six 
 countries worked on updating the material, and added a new SQL lesson to the existing four. Interest burgeoned. 
 Library Carpentry won the British Library Labs award in November 2016, and there have been 30 workshops worldwide 
