--- a/_posts/2017/06/2017-06-06-bw_cdl.md
+++ b/_posts/2017/06/2017-06-06-bw_cdl.md
@@ -33,7 +33,7 @@ Gold Coast and Rockhampton - a huge improvement on 2015, when we taught three wo
 
 I organised Software Carpentry instructor training in Brisbane in 2016, and certified as an instructor trainer myself in 
 late 2016. I have since helped train an online cohort and a librarian cohort face to face in Portland, OR (with the wonderful
-Tim Dennis as my co-trainer). I look forward to training many more new instructors in 2017 and beyond.
+[Tim Dennis](https://twitter.com/jt14den) as my co-trainer). I look forward to training many more new instructors in 2017 and beyond.
 
 I currently serve as the Software Carpentry administrator for half of Australia. This means helping people 
 in other Australian states and territories organise workshops. I have also served on the Software Carpentry Steering Committee for 
@@ -49,7 +49,7 @@ festivals, and ResBaz events are a great way to attract more people to Software 
 Sam Hames and Nicholas Hamilton, I started a weekly Hacky Hour drop in advice sessions for researchers at The 
 University of Queensland.
 
-In June 2016, I organised a sprint to update and extend the [Library Carpentry[(http://librarycarpentry.github.io) material created by Dr James Baker and 
+In June 2016, I organised a sprint to update and extend the [Library Carpentry[(http://librarycarpentry.github.io) material created by [Dr James Baker](https://twitter.com/j_w_baker) and 
 others in the UK. This was part of the annual 2-day Mozilla Science Lab Global Sprint. More than 20 people in six 
 countries worked on updating the material, and added a new SQL lesson to the existing four. Interest burgeoned. 
 Library Carpentry won the British Library Labs award in November 2016, and there have been 30 workshops worldwide 
