fixing rogue bracket

--- a/_posts/2017/06/2017-06-06-bw_cdl.md
+++ b/_posts/2017/06/2017-06-06-bw_cdl.md
@@ -49,7 +49,7 @@ festivals, and ResBaz events are a great way to attract more people to Software 
 Sam Hames and Nicholas Hamilton, I started a weekly Hacky Hour drop in advice sessions for researchers at The 
 University of Queensland.
 
-In June 2016, I organised a sprint to update and extend the [Library Carpentry[(http://librarycarpentry.github.io) material created by [Dr James Baker](https://twitter.com/j_w_baker) and 
+In June 2016, I organised a sprint to update and extend the [Library Carpentry](http://librarycarpentry.github.io) material created by [Dr James Baker](https://twitter.com/j_w_baker) and 
 others in the UK. This was part of the annual 2-day Mozilla Science Lab Global Sprint. More than 20 people in six 
 countries worked on updating the material, and added a new SQL lesson to the existing four. Interest burgeoned. 
 Library Carpentry won the British Library Labs award in November 2016, and there have been 30 workshops worldwide 
