adding Jonah's suggested change

--- a/_posts/2017/06/2017-06-06-bw_cdl.md
+++ b/_posts/2017/06/2017-06-06-bw_cdl.md
@@ -24,7 +24,7 @@ I dive right into the new job on 19 June, when I will be running an instructor t
 at Macquarie University in Sydney. It will be great to see the instructor pool in Sydney increase.
 
 I have been a fan of Software Carpentry since first hearing about it in 2014, when I organised the first ever Software 
-Carpentry bootcamp in Brisbane in July.
+Carpentry bootcamp in Brisbane in July of that year.
 
 I certified as a Software Carpentry instructor in 2015 (and as a Data Carpentry instructor the same year), and 
 taught at two workshops. In 2016, I taught at eight workshops out of a total of 14 statewide. During 2016, I and other 
