--- a/_posts/2017/06/2017-06-06-bw_cdl.md
+++ b/_posts/2017/06/2017-06-06-bw_cdl.md
@@ -32,7 +32,7 @@ Queensland instructors took Software Carpentry to five cities in Queensland - Br
 Gold Coast and Rockhampton - a huge improvement on 2015, when we taught three workshops in Brisbane only. 
 
 I organised Software Carpentry instructor training in Brisbane in 2016, and certified as an instructor trainer myself in 
-late 2016. I have since helped train an online cohort and a librarian cohort face to face in Portland, OR (with the wonderful
+late 2016. I have since helped train an online cohort and a librarian cohort face-to-face in Portland, Oregon (with the wonderful
 [Tim Dennis](https://twitter.com/jt14den) as my co-trainer). I look forward to training many more new instructors in 2017 and beyond.
 
 I currently serve as the Software Carpentry administrator for half of Australia. This means helping people 
@@ -53,7 +53,7 @@ In June 2016, I organised a sprint to update and extend the [Library Carpentry](
 others in the UK. This was part of the annual 2-day Mozilla Science Lab Global Sprint. More than 20 people in six 
 countries worked on updating the material, and added a new SQL lesson to the existing four. Interest burgeoned. 
 Library Carpentry won the British Library Labs award in November 2016, and there have been 30 workshops worldwide 
-since the 2016 sprint. The recently concluded 2017 sprint attracted 107 people at 13 sites worlwide. New lessons were added (web scraping, 
+since the 2016 sprint. The recently concluded 2017 sprint attracted 107 people at 13 sites worldwide. New lessons were added (web scraping, 
 introductory Python) and existing lessons were updated. The community is very active, with an ongoing 
 [chat room](https://gitter.im/weaverbel/LibraryCarpentry). 
 New members are welcome.
