Adding my Twitter handle

--- a/_posts/2017/06/2017-06-06-bw_cdl.md
+++ b/_posts/2017/06/2017-06-06-bw_cdl.md
@@ -70,4 +70,4 @@ to host me, please get in touch.
 
 I am also looking forward to working with the Software and Data Carpentry staff - we all have big plans!
 
-Contact me any time at bweaver AT carpentries.org. I look forward to meeting you all.
+Contact me any time at bweaver AT carpentries.org or ping me on [Twitter](https://twitter.com/cloudaus). I look forward to meeting you all.
