Blog post with SWC/DC merger update

--- a/_posts/2017/06/2017-06-17-merger.md
+++ b/_posts/2017/06/2017-06-17-merger.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-authors: ["Karen Cranston", "Rayna Harris", "Kate Hertweck", "Hilmar Lapp", ]
+authors: ["Karen Cranston", "Rayna Harris", "Kate Hertweck", "Hilmar Lapp"]
 title: "Timeline for the the Data Carpentry & Software Carpentry Reorganization"
-date: 2017-06-10
+date: 2017-06-17
 time: "16:00"
 category: ["Steering Committee", "Community", "Data Carpentry"]
 ---
