--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -17,23 +17,26 @@ We may also have had the biggest-ever workshop etherpad, coming in at 1400+ line
 Certainly the eventual size of the etherpad mirrored the deep engagement of attendees, who all worked very hard.
 
 Eighteen people attended the training, most of them from Macquarie (a mixture of postgrad students and IT/research support staff), 
-but there were also attendees from local institutions UNSW and the University of Sydney.
+but there were also attendees from local institutions [UNSW](https://www.unsw.edu.au/) and the [University of Sydney](http://sydney.edu.au).
 
-Feedback was plentiful - we did both sticky note feedback and One Up, One Down - and we were praised for the friendly atmosphere
+Feedback was plentiful - we did both sticky note feedback and One Up, One Down twice - and we were praised for the friendly atmosphere
 and the energy we brought to the workshop. 
 
-A talking stick circulated to make sure quieter voices got to have their fair share of the conversation, and this attracted a 
-favourable mention in feedback.
+A talking stick circulated to make sure quieter voices got to have their fair share of the conversation, and this attracted a favourable mention in feedback.
+
+![talking stick]({site.baseurl}/files/2017/talkingstick.jpg "talking stick")
 
 Enthusiasm to build community and to get the skills out to others was high, though as one attendee  
-commented a little ruefully: "Daily noise gets in the way".
+commented a little ruefully in final feedback: "Daily noise gets in the way".
 
 Jonah was forced to multi-task through one session, taking advantage of some audience challenge time to fix problems on the
-Software Carpentry website, which had disappeared from view because of a Jekyll page build problem. All was fixed 
+Software Carpentry website, which had disappeared from view because of a Jekyll page build problem. All was luckily fixed 
 before the class raised their heads again. 
 
+![Jonah typing]({site.baseurl}/files/2017/jonahfixing.jpg "Jonah fixing the website")
+
 Attendees were keen to put what they had learned into practice, and most enjoyed the live teaching practices more than
-they had anticipated. As with most workshops, people wished they had learned some of the material long ago!
+they had anticipated. As with most workshops, some people wished they had learned some of the material long ago!
 
 Jonah and I both appreciated the efforts of our magnificent, well-organised helper Carmi Cronje,
 who scribed for us tirelessly throughout the workshop. Thanks must also go to Emily Brennan, Project Coordinator in
@@ -43,4 +46,5 @@ get this workshop organised, and Professor Peter Nelson, PVC Research Performanc
 Macquarie are very keen to develop a community around skills and training, and this workshop was a fantastic first step. I look
 forward to welcoming the class to the Software and Data Carpentry instructor communities.
 
+![Group shot]({site.baseurl}/files/2017/mqgroupshot.jpg "Group shot")
 
