changing community to CoP

--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -43,7 +43,7 @@ who scribed for us tirelessly throughout the workshop. Thanks must also go to Em
 the Office of the Deputy Vice-Chancellor (Research), who worked very hard to
 get this workshop organised, and Professor Peter Nelson, PVC Research Performance and Innovation, who funded the workshop.
 
-Macquarie are very keen to develop a community around skills and training, and this workshop was a fantastic first step. I look
+Macquarie are very keen to develop strong communities of practice around skills and training, and this workshop was a fantastic first step. I look
 forward to welcoming the class to the Software and Data Carpentry instructor communities.
 
 ![Group shot]({site.baseurl}/files/2017/mqgroupshot.jpg "Group shot")
