--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -41,7 +41,7 @@ they had anticipated. As with most workshops, some people wished they had learne
 Jonah and I both appreciated the efforts of our magnificent, well-organised helper Carmi Cronje,
 who scribed for us tirelessly throughout the workshop. Thanks must also go to Emily Brennan, Project Coordinator in
 the Office of the Deputy Vice-Chancellor (Research), who worked very hard to
-get this workshop organised, and Professor Peter Nelson, PVC Research Performance and Innovation, who funded the workshop.
+make this workshop happen, and Professor Peter Nelson, PVC Research Performance and Innovation, who funded the workshop.
 
 Macquarie are very keen to develop strong communities of practice around skills and training, and this workshop was a fantastic first step. I look
 forward to welcoming the class to the Software and Data Carpentry instructor communities.
