--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -33,7 +33,7 @@ Jonah was forced to multi-task through one session, taking advantage of some aud
 Software Carpentry website, which had disappeared from view because of a Jekyll page build problem. All was luckily fixed 
 before the class raised their heads again. 
 
-![Jonah typing]({site.baseurl}/files/2017/jonahfixing.jpg "Jonah fixing the website")
+![Jonah typing]({site.baseurl}/files/2017/jonahfix.jpg "Jonah fixing the website")
 
 Attendees were keen to put what they had learned into practice, and most enjoyed the live teaching practices more than
 they had anticipated. As with most workshops, some people wished they had learned some of the material long ago!
