--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -24,7 +24,7 @@ and the energy we brought to the workshop.
 
 A talking stick circulated to make sure quieter voices got to have their fair share of the conversation, and this attracted a favourable mention in feedback.
 
-![talking stick]({site.baseurl}/files/2017/talkingstick.jpg "talking stick")
+![talking stick]({{site.baseurl}}/files/2017/talkingstick.jpg "talking stick")
 
 Enthusiasm to build community and to get the skills out to others was high, though as one attendee  
 commented a little ruefully in final feedback: "Daily noise gets in the way".
@@ -33,7 +33,7 @@ Jonah was forced to multi-task through one session, taking advantage of some aud
 Software Carpentry website, which had disappeared from view because of a Jekyll page build problem. All was luckily fixed 
 before the class raised their heads again. 
 
-![Jonah typing]({site.baseurl}/files/2017/jonahfix.jpg "Jonah fixing the website")
+![Jonah typing]({{site.baseurl}}/files/2017/jonahfix.jpg "Jonah fixing the website")
 
 Attendees were keen to put what they had learned into practice, and most enjoyed the live teaching practices more than
 they had anticipated. As with most workshops, some people wished they had learned some of the material long ago!
