--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -4,7 +4,7 @@ authors: ["Belinda Weaver"]
 title: "Instructor Training at Macquarie University"
 date: 2017-06-20
 time: "06:00:00"
-category: ["Instructor Training", "Teaching"]
+category: ["Instructor Training", "Teaching", "Workshops"]
 ---
 
 Software Carpentry Executive Director Jonah Duckles and I ran instructor training 
@@ -24,7 +24,7 @@ and the energy we brought to the workshop.
 
 A talking stick circulated to make sure quieter voices got to have their fair share of the conversation, and this attracted a favourable mention in feedback.
 
-![talking stick]({site.baseurl}/files/2017/o5/talkingsticksm.jpg "talking stick")
+![talking stick](/files/2017/05/talkingsticksm.jpg "talking stick")
 
 Enthusiasm to build community and to get the skills out to others was high, though as one attendee  
 commented a little ruefully in final feedback: "Daily noise gets in the way".
@@ -33,7 +33,7 @@ Jonah was forced to multi-task through one session, taking advantage of some aud
 Software Carpentry website, which had disappeared from view because of a Jekyll page build problem. All was luckily fixed 
 before the class raised their heads again. 
 
-![Jonah typing]({site.baseurl}/files/2017/05/jonahfixsm.jpg "Jonah fixing the website")
+![Jonah typing](/files/2017/05/jonahfixsm.jpg "Jonah fixing the website")
 
 Attendees were keen to put what they had learned into practice, and most enjoyed the live teaching practices more than
 they had anticipated. As with most workshops, some people wished they had learned some of the material long ago!
@@ -46,5 +46,5 @@ make this workshop happen, and Professor Peter Nelson, PVC Research Performance 
 Macquarie are very keen to develop strong communities of practice around skills and training, and this workshop was a fantastic first step. I look
 forward to welcoming the class to the Software and Data Carpentry instructor communities.
 
-![Group shot]({site.baseurl}/files/2017/05/mqgroupshot.jpg "Group shot")
+![Group shot](/files/2017/05/mqgroupshot.jpg "Group shot")
 
