Fixing one more pic

--- a/_posts/2017/06/2017-06-19-mqu-ttt.md
+++ b/_posts/2017/06/2017-06-19-mqu-ttt.md
@@ -46,5 +46,5 @@ make this workshop happen, and Professor Peter Nelson, PVC Research Performance 
 Macquarie are very keen to develop strong communities of practice around skills and training, and this workshop was a fantastic first step. I look
 forward to welcoming the class to the Software and Data Carpentry instructor communities.
 
-![Group shot]({site.baseurl}/files/2017/mqgroupshot.jpg "Group shot")
+![Group shot]({{site.baseurl}}/files/2017/mqgroupshot.jpg "Group shot")
 
