add scenario info

--- a/_posts/2017/06/2017-06-26-ws-admin.md
+++ b/_posts/2017/06/2017-06-26-ws-admin.md
@@ -21,5 +21,7 @@ You can  be based anywhere. The incumbent will be hired and paid as an independe
 
 Review of applications will begin on July 17, 2017, and the position will remain open until filled.
 
-To apply, please  send your resume or CV and a cover letter to [jobs@carpentries.org](mailto:jobs@carpentries.org).
+To apply, please  send your resume or CV and a cover letter that addresses the following scenario to [jobs@carpentries.org](mailto:jobs@carpentries.org).
+
+Insert scenario:
 
