--- a/_posts/2017/06/2017-06-26-ws-admin.md
+++ b/_posts/2017/06/2017-06-26-ws-admin.md
@@ -7,8 +7,9 @@ time: "06:00:00"
 category: ["Job posting", "Staff", "Workshops"]
 ---
 
-Software and Data Carpentry are looking to hire a part-time Workshop Administrator to help set up workshops and ensure that they
-run smoothly. 
+With the growth of Carpentry workshops all over the world, we are excited that Maneesha Sane is moving from Program Coordinator to Program Manager of Software and Data Carpentry. As Program Manager, she will continue to be involved in workshop coordination and instructor training and will oversee and ensure the quality and consistency of program operations. She will also work to develop processes, infrastructure and communications to consistently improve the workshop experience for instructors, hosts and learners.
+
+To fill some of her workshop coordination responsibilities, Software and Data Carpentry are looking to hire a **part-time Workshop Administrator** to help set up workshops and ensure that they run smoothly.
 
 The successful candidate will join a team of workshop coordinators around the world. In this job, you will manage workshop logistics, 
 help communicate with hosts and instructors, and respond to general workshop inquiries.
@@ -16,12 +17,13 @@ help communicate with hosts and instructors, and respond to general workshop inq
 We are looking for someone with strong organizational and communication skills, who can prioritize competing tasks and 
 work independently. Strong attention to detail is a must. Enthusiasm for our mission of teaching people how to program is also a plus!
 
-You can  be based anywhere. The incumbent will be hired and paid as an independent contractor of our 501(c)3 fiscal sponsor, 
-[NumFOCUS](https://www.numfocus.org/).  Pay will be US $ XXX - YYY/hour depending on experience.
+This is a remote position. The incumbent will be hired and paid as an independent contractor of our 501(c)3 fiscal sponsor, 
+[NumFOCUS](https://www.numfocus.org/).  The position will begin as part-time, approximately 20 hours a week, but has the potential to become full time.
 
 Review of applications will begin on July 17, 2017, and the position will remain open until filled.
 
-To apply, please  send your resume or CV and a cover letter that addresses the following scenario to [jobs@carpentries.org](mailto:jobs@carpentries.org).
+For more details on the position and information on how to apply, please see the [full job posting](https://software-carpentry.org/jobs/).
 
-Insert scenario:
+
+
 
