adding a para about becoming an instructor

--- a/_posts/2017/07/2017-07-01-helper.md
+++ b/_posts/2017/07/2017-07-01-helper.md
@@ -35,12 +35,11 @@ Learners will appreciate your honesty.
 
 The main thing is to be friendly and approachable. 
 
-Helping at a workshop is one way to see Software Carpentry workshops in action. If you have attended a workshop before, 
-it may reinforce your own learning. Hearing things explained again can really help consolidate your knowledge. 
-You might also pick up new tricks and tips. A key benefit is helping people get started, 
+Helping at a workshop is a way to see workshops in action. You may be trying to figure out if you'd like to become an instructor yourself. You might even want to have a crack at teaching a section, knowing there are more experienced instructors in the room should you run into problems. You can certainly learn a lot about instructing by watching others. Many helpers do go on to become instructors themselves, reinforcing their own learning by teaching the material to other people.
+
+If you have attended a workshop before, helping may reinforce your own learning. Hearing things explained again can really help consolidate your knowledge. You might also pick up new tricks and tips. A key benefit is helping people get started, 
 feeling you are making a contribution to their learning, and to the learning community within your institution. 
 It might kickstart a new community of practice, or just a networking group for when times get tough 
 and you need to talk your work over with someone who is struggling with the same problems. 
-Many helpers go on to become instructors themselves, reinforcing their own learning by teaching the material to other people.
 
 So what are you waiting for? FInd a workshop near you and volunteer. You will be made very welcome in what is a great, global community.
