--- a/_posts/2017/07/2017-07-07-nasa-two.md
+++ b/_posts/2017/07/2017-07-07-nasa-two.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 authors: ["Ryan Avery", "Kunal Marwaha"]
-title: "Two Workshops at NASA DEVELOP"
+title: "Two Workshops at NASA DEVELOP (or, Python De-Fanged)"
 date: 2017-07-06
 time: "06:00:00"
 category: [ "Debriefs", "Workshops"]
@@ -70,13 +70,13 @@ responses were positive and most learners reported feeling more motivated and le
  
 The audience was very engaged and committed to staying the full length of the workshop. It included a high school teacher and student from John I. Burton High School (where we hosted the workshop) and the 7 participants of the NASA DEVELOP program at Wise. The NASA participants had already met a week prior, so there was existing camaraderie that made the workshop less formal and more welcoming. Furthermore, this workshop began after a weekend, with participants fresh and ready to tackle new challenges.
  
-The audience was new to programming but were proficient at typing and navigating their computer via a GUI, which made this workshop a lot easier to teach. Three instructors for nine learners also made a huge difference, for example, one participant was slightly behind for most of the first Python lesson, but was able to catch up each time with 1:1 help from an instructor.
+The audience was new to programming but were proficient at typing and navigating their computer via a GUI, which made this workshop a lot easier to teach. Three instructors for nine learners also made a huge difference, for example, one participant was slightly behind for most of the first Python lesson, but was able to catch up each time with one-on-one help from an instructor.
  
 Some changes we made between this workshop after learning from the one at Hampton - we decided to not teach plotting from the Gapminder tutorial since we had already covered this in Inflammation. We also decided to provide more challenge exercises to give more hands-on experience and less 'lecture' time. Folks were really excited by a few hands-on tutorials; there were several moments where the room was full of "oohs" and cheering. 
 
 A couple of highlights included:
 
-- After teaching Git, we pointed people to the Github for "pianobar", a program to run Pandora from your command line. Learners cloned the appropriate repository (or `brew installed` it), and were able to connect their Pandora accounts and use the command line to create stations and play music. This was a good ti- in with versioning and collaboration and got the learners excited about the world of open source programming.
+- After teaching Git, we pointed people to the Github for "pianobar", a program to run Pandora from your command line. Learners cloned the appropriate repository (or `brew installed` it), and were able to connect their Pandora accounts and use the command line to create stations and play music. This was a good tie-in with versioning and collaboration and got the learners excited about the world of open source programming.
 
 - In the final hour, we ran a couple of exercises at the end:
 
@@ -117,4 +117,3 @@ Feedback was overwhelming positive, with 8/8 respondents to the post-workshop su
 - I want more than 2 days of Software Carpentry. I want to learn more.
 - Maybe just slow down explaining some parts
 - Maybe break down exactly how these programs could work with our specific projects.
-
