--- a/_posts/2017/07/2017-07-07-nasa-two.md
+++ b/_posts/2017/07/2017-07-07-nasa-two.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-authors: ["Ryan Avery", "Kunal Marwaha"]
+authors: ["Ryan Avery", "Kunal Marwaha", "Katie Moore", "Kelly Meehan"]
 title: "Two Workshops at NASA DEVELOP (or, Python De-Fanged)"
 date: 2017-07-06
 time: "06:00:00"
