--- a/_posts/2017/07/2017-07-10-NASA-2.md
+++ b/_posts/2017/07/2017-07-10-NASA-2.md
@@ -21,7 +21,7 @@ category: [ "Debriefs", "Workshops"]
  For Katie, Kelly, and I, these were the first workshops in which we taught entire lessons
  and we found it to be an extremely rewarding experience.
 
- ### NASA DEVELOP at Langley Workshop
+ ## NASA DEVELOP at Langley Workshop
 
  - Attendees Day 1: 19
  - Attendees Day 2: 15
@@ -49,7 +49,7 @@ category: [ "Debriefs", "Workshops"]
  There was some drop off in attendance on the second day, however, overall feedback and survey
  responses were positive and most learners reported feeling more motivated and less intimidated by the UNIX Shell, Python, and Git.
 
- ## Some of the feedback we got:
+## Some of the feedback we got:
 
  **Good**
 
