--- a/_posts/2017/07/2017-07-11-potsdam.md
+++ b/_posts/2017/07/2017-07-11-potsdam.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-subheadline: "First time for everything"
-title: "Two workshops in Potsdam, Germany"
+title: "First time for everything"
 date: 2017-07-11
 time: "17:00:00"
 authors: ["Peter Evans"]
