Replace bottom links with inline [][] -> []()

--- a/_posts/2017/07/2017-07-11-potsdam.md
+++ b/_posts/2017/07/2017-07-11-potsdam.md
@@ -14,23 +14,23 @@ My last teaching was many years back, as a teaching assistant in graduate school
 But those were rather theoretical, blackboard affairs.
 This was my first attempt at teaching software, and with live coding demos.
 Didn't Steve Jobs himself say "never give a software demo"?
-([Okay, maybe not][quora-jobs].)
+([Okay, maybe not](https://www.quora.com/Did-Steve-Jobs-ever-give-a-demo-that-flopped).)
 In the end though, I was happily surprised by the experience.
 
 ## Getting there is half the fun
 
-At the end of the long German winter, a group of us had come together with the idea of holding a useful workshop or two for our institutes - the [GFZ German Research Centre for Geosciences][gfz], the [Potsdam Institute for Climate Impact Research (PIK)][pik], and the University of Potsdam (UP), and others.
+At the end of the long German winter, a group of us had come together with the idea of holding a useful workshop or two for our institutes - the [GFZ German Research Centre for Geosciences](http://gfz-potsdam.de), the [Potsdam Institute for Climate Impact Research (PIK)](http://pik-potsdam.de), and the University of Potsdam (UP), and others.
 
 After much discussion, we settled on two two-day workshops to be held in May - one a [Python Novice](https://swc-bb.github.io/2017-05-15-GFZ/) workshop, and the other on [R](https://swc-bb.github.io/2017-05-17-GFZ/).
 There was strong interest and many more people wanted to take part
 than we could fit.
 
 We had a large group of instructors and helpers with a diverse background.
-One or two had done this before; three of us had just completed the SWC [instructor training course][swc-instructor-training], but hadn't checked out yet.
+One or two had done this before; three of us had just completed the SWC [instructor training course](http://swcarpentry.github.io/instructor-training/), but hadn't checked out yet.
 Martin Hammitzsch led us in wisely lowering our sights to something achievable, and in managing much of the administrative work required to get us there.
 We were fortunate to have a great venue available.
-(Literally, as it was at the [GeoLab meeting space][geolab]
-in the base of the [Great Refractor][aip-refractor],
+(Literally, as it was at the [GeoLab meeting space](http://www.gfz-potsdam.de/en/centre/education-and-training/training-center-geolab/)
+in the base of the [Great Refractor](http://www.aip.de/en/press/gf-et/gf-et/GF),
 one of the important scientific instruments of the end of the nineteenth century.)
 Little set-up time was needed, as we were able to distribute
 preconfigured disk images to all the computers in the room.
@@ -60,7 +60,6 @@ Much credit is due to the SWC community for giving us such a solid, well-structu
 These workshops were a good learning experience for the instructors (for the participants too!) and we look forward to putting on an even better workshop in 2018.
 
 
-Tags: #Germany #SoftwareCarpentry
 
 [aip-refractor]: http://www.aip.de/en/press/gf-et/gf-et/GF
 
