Add link to image in 2017-07-11-potsdam.md

--- a/_posts/2017/07/2017-07-11-potsdam.md
+++ b/_posts/2017/07/2017-07-11-potsdam.md
@@ -59,12 +59,4 @@ Much credit is due to the SWC community for giving us such a solid, well-structu
 
 These workshops were a good learning experience for the instructors (for the participants too!) and we look forward to putting on an even better workshop in 2018.
 
-
-
-[aip-refractor]: http://www.aip.de/en/press/gf-et/gf-et/GF
-
-[gfz]: http://gfz-potsdam.de
-[geolab]: http://www.gfz-potsdam.de/en/centre/education-and-training/training-center-geolab/
-[pik]: http://pik-potsdam.de
-[quora-jobs]: https://www.quora.com/Did-Steve-Jobs-ever-give-a-demo-that-flopped
-[swc-instructor-training]: http://swcarpentry.github.io/instructor-training/
+[Image](20170518_104312.jpg)
