--- a/_posts/2017/07/2017-07-11-potsdam.md
+++ b/_posts/2017/07/2017-07-11-potsdam.md
@@ -59,4 +59,4 @@ Much credit is due to the SWC community for giving us such a solid, well-structu
 
 These workshops were a good learning experience for the instructors (for the participants too!) and we look forward to putting on an even better workshop in 2018.
 
-![Classroom shot](20170518_104312.jpg "Getting into 'Navigating Files and Directories' the in the basic shell introduction.")
+![Classroom shot](20170518_104312.jpg "Getting into _Version Control with Git_")
