--- a/_posts/2017/07/2017-07-20-cty-call.md
+++ b/_posts/2017/07/2017-07-20-cty-call.md
@@ -11,7 +11,7 @@ When I started as Community Development Lead, I posted a [Google form](https://d
 
 I got a range of responses, from concerns about lesson maintenance to a call for more briefings to help people stay connected.
 
-Also raised were instructor retention - how do we prevent burnout so good people don't leave? - and instructor involvement - how do we increase the numbers of instructors reading our blog posts, signing up for the newsletter, getting involved in community calls and committees like mentoring?
+Also raised were instructor *retention* - how do we prevent burnout so good people don't leave? - and instructor *involvement* - how do we increase the numbers of instructors reading our blog posts, signing up for the newsletter, getting involved in community calls and committees like mentoring?
 
 'Quality control' of workshops was also raised. Obviously workshops where people teach their own material, use slides instead of live coding, or don't otherwise follow our pedagogy can damage people's trust in the Carpentries. But how do we find out about those? And how can we educate our instructors on what makes a good workshop?
 
