Removed extra character

--- a/_posts/2017/07/2017-08-07-be-a-champ.md
+++ b/_posts/2017/07/2017-08-07-be-a-champ.md
@@ -8,7 +8,7 @@ category: [ "Community", "Champions", "Community Building"]
 ---
 
 When people sign up for our newsletter, *Carpentry Clippings*, many mention community building as one of their key interests. 
-We are lucky in the Carpentries to have so many people who want to build local groups. These people are our community's champions.. They
+We are lucky in the Carpentries to have so many people who want to build local groups. These people are our community's champions. They
 are the hard workers who volunteer their time to organise and run local workshops, recruit new instructors and helpers, 
 teach and maintain our lessons, serve on committees and task forces, and generally help further the Carpentries' mission 
 of skilling up researchers to do more efficient, reproducible science. 
