adding errant quotation mark

--- a/_posts/2017/08/2017-08-24-release-2017.08.md
+++ b/_posts/2017/08/2017-08-24-release-2017.08.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-authors: ["Kate Hertweck", "Rémi Emonet]
+authors: ["Kate Hertweck", "Rémi Emonet"]
 title: "Publishing our lessons, Version 2017.08"
 date: 2017-08-24
 time: "19:00:00"
