Fix link markup

--- a/_posts/2017/09/2017-09-02-merger.md
+++ b/_posts/2017/09/2017-09-02-merger.md
@@ -18,7 +18,7 @@ On August 30, 2017, the Software Carpentry and Data Carpentry Steering Committee
 - Approve merger of Software Carpentry and Data Carpentry: The Software Carpentry and Data Carpentry steering committees approve the merger of the two organizations into a single umbrella organization with associated lesson organizations, with a starting date of January 1, 2018.
 - Approve appointed members of combined board: We appoint Karen Cranston, Kate Hertweck, Mateusz Kuzak, Sue McClatchy, and Ethan White to the board of the umbrella organization.
 
-We are now very excited for the next steps in putting together the Carpentries! Even though the two motions passed this week lay the groundwork for a merged organization, there’s still a lot of work to be done on the details of how this will all come together. The two Steering Committees (which remain in command until Dec 31) will be putting together Requests for Comment (https://www.mediawiki.org/wiki/Requests_for_comment), because community input in decisions and structure around everything from governance to curriculum oversight will be key.
+We are now very excited for the next steps in putting together the Carpentries! Even though the two motions passed this week lay the groundwork for a merged organization, there’s still a lot of work to be done on the details of how this will all come together. The two Steering Committees (which remain in command until Dec 31) will be putting together [Requests for Comment](https://www.mediawiki.org/wiki/Requests_for_comment), because community input in decisions and structure around everything from governance to curriculum oversight will be key.
 
 #### A very brief history of Software and Data Carpentry
 
