--- a/_posts/2017/09/2017-09-10-ethiopia.md
+++ b/_posts/2017/09/2017-09-10-ethiopia.md
@@ -9,11 +9,11 @@ category: [ "Africa", "Ethiopia", "Data Carpentry", "Women"]
 
 The [Ethiopian Education and Research Network](http://www.ethernet.edu.et/) (EthERNet) from the Ministry of Education in collaboration with  the   [German International Cooperation (GIZ) Sustainable Training and Education Programme](https://www.giz.de/en/worldwide/336.html) (STEP), the [Education Strategy Center](http://www.esc.gov.et/) (ESC) and [Talarify](http://talarify.co.za/) organised its first ever Data Carpentry workshop for young academics and researchers in Ethiopia. The workshop was conducted over two and a half days from [14-16 August 2017](https://anelda.github.io/2017-08-14-Ethiopia/) at Addis Ababa Institute of Technology (AAiT). The main aim was to increase data literacy for researchers and establish a community of good research data practice in Ethiopia in order to increase the presence of Ethiopian researchers in the global research community. **Note:** UNESCO Statistics Institute reveals that in 2016 1.1% of the global research community are researchers coming from Sub-Saharan Africa. On average 30.4% from all Sub-Saharan researchers are females, whereas Ethiopia counts 13.3 % female researchers out of all Ethiopian researchers. 
 
-![Images from the workshop](./ethiopia-workshop.jpg)
+<img src="./ethiopia-workshop.jpg" alt="Ethiopian workshop">
 
 Over 25 participants from all over Ethiopia joined the workshop. 98% of participants were women representing different research disciplines including animal nutrition, soil sciences, economics, sport sciences and information technology to name a few. The event was lead by Data Carpentry instructors from South Africa with helpers from Ethiopia and mainly covered lessons included in the Data Carpentry Ecology workshop - better use of Spreadsheets, data cleaning in OpenRefine, and data analysis and visualisation in R. Lactatia Motsuku from the South African National Cancer Registry and Glenn Moncrieff from Ixio Analytics recently trained as instructors and this was their first opportunity to teach as part of the Data Carpentry team.
 
-![Ethiopian cuisine](./ethiopia-food.jpg "The Ethiopian cuisine and coffee was an absolute highlight.")
+<img src="./ethiopia-food.jpg" alt="The Ethiopian cuisine and coffee was an absolute highlight.">
 
 Our instructors’ experience:
 * Lactatia: “As much as this was the first data carpentry for Ethiopia, this was the first instructor training for me. Before I joined Data Carpentry network, I had no idea what I can do to make changes in other people’s lives. It made me happy to see the transition in only three days i.e. From participants having no idea where to start with data analysis to facial expressions as they sigh “Oooh, okkayyy” and the nodding as they realise that there are beautiful, efficient and very effective tools to work with data. Ethiopia is a very nice place, very religious and full of kind people. I really enjoyed the food. It was organic, healthy and delicious. I bow down to the coffee ceremony and Margareth was a beautiful host, she managed to organise us dinner at [2000 Habesha](https://www.tripadvisor.co.za/Restaurant_Review-g293791-d1650594-Reviews-2000_Habesha_Cultural_Restaurant-Addis_Ababa.html) which is a traditional restaurant with touch of Ethiopian music. It was great to see my colleagues doing The Shoulder dance.”
