--- a/_posts/2017/09/2017-09-19-rfc.md
+++ b/_posts/2017/09/2017-09-19-rfc.md
@@ -32,4 +32,6 @@ topics:
 * RFC7 Lesson Organizations
 
 **Please head over to the [GitHub repository](https://github.com/carpentries/2017Merger) 
-and add your comments to relevant issues by October 6, 2017.**
+and add your comments to relevant issues by October 6, 2017.** If you prefer not to respond on GitHub, 
+or would like to remain anonymous, you may respond to the RFCs using this 
+[Google Form](https://docs.google.com/forms/d/1O2OzFhxcYGlUu_x3mBeQ-EVzJ1z0Q_-ZuArnmlxvdfs/viewform?edit_requested=true).
