add Jessica Upani's name

--- a/_posts/2017/11/2017-11-26-sc-candidates-2018.md
+++ b/_posts/2017/11/2017-11-26-sc-candidates-2018.md
@@ -18,7 +18,8 @@ The nominees so far are:
 - [Lex Nederbragt](https://software-carpentry.org/blog/2017/11/election-nederbragt.html) (Norway)
 - [Raniere Silva](https://software-carpentry.org/blog/2017/11/election-silva.html) (Brazil, but currently in the UK)
 - [Juan Steyn](https://software-carpentry.org/blog/2017/11/2018-election-juan-steyn.html) (South Africa)
-- [Elizabeth Wickes](https://software-carpentry.org/blog/2017/11/election-wickes.html) (US) 
+- [Jessia Upani](https://software-carpentry.org/blog/2017/12/jessica-upani-sc.html) (Namibia)
+- [Elizabeth Wickes](https://software-carpentry.org/blog/2017/11/election-wickes.html) (US)
 
 There is still time to put your name forward. Nominations will close on 1 December. 
 
