Moving last thing to first as per Tracy's suggestion

--- a/_posts/2018/01/2018-01-08-teach-prac-01.md
+++ b/_posts/2018/01/2018-01-08-teach-prac-01.md
@@ -7,6 +7,10 @@ time: "00:00:00"
 category: ["Communication", "Workshops", "Code of Conduct", "Teaching Practices"]
 ---
 
+*This is the first in a series of posts about Carpentries' teaching practices. 
+Subsequent posts will cover the other practices - live coding, sticky notes, helpers, 
+challenges, etherpads - that make Carpentries' workshops the success that they are.*
+
 I gave a talk recently for the [Australian National Data Service](http://www.ands.org.au/) on 'teaching the Carpentries way'.
 Originally I planned to cover six reasons why our workshops are effective, but ended up covering thirteen, with the thirteenth being the
 Carpentries' [Code of Conduct](https://software-carpentry.org/conduct/).
@@ -62,7 +66,3 @@ contributions to our [Slack channel](https://swc-slack-invite.herokuapp.com/).
 
 As we move forward to the merged Carpentries, it is timely to remind people why we value our the Code of Conduct. 
 The Code is central to our efforts to build a welcoming, diverse, inclusive global community.
-
-This is the first in a series of posts about Carpentries' teaching practices. 
-Subsequent posts will cover the other practices - live coding, sticky notes, helpers, 
-challenges, etherpads - that make Carpentries' workshops the success that they are.
