--- a/_posts/2018/01/2018-01-08-teach-prac-01.md
+++ b/_posts/2018/01/2018-01-08-teach-prac-01.md
@@ -55,7 +55,7 @@ It is therefore up to the Instructors to set the workshop tone. If someone is en
 or hogging workshop time to show off, then the Instructors must try to rein that person in. 
 Your learners will be grateful, and they will also feel you are 'walking the talk', not just paying lip service to an ideal.
 
-A female attendee at a workshop I taught last year wrote on a feedback sticky: "Nice that there are talking rules". 
+An attendee at a workshop I taught last year wrote on a feedback sticky: "Nice that there are talking rules". 
 The sticky included a smiley face. A meaningful Code of Conduct makes the workshop better for everyone. 
 
 However, it is not only in our workshops that the Code of Conduct applies. We want all interactions within our 
