remove reference to spring

--- a/_posts/2018/03/2018-03-07-bug-bbq.md
+++ b/_posts/2018/03/2018-03-07-bug-bbq.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 authors: ["François Michonneau", "Erin Becker"]
-title: "Announcing the Spring 2018 Bug BBQ"
+title: "Announcing the first joint Carpentries Bug BBQ"
 date: 2018-03-08
 time: "00:00:00"
 category: [ "Curriculum"]
