Remove duplicate "the" & "and" from texts

--- a/_posts/2017/09/2017-09-10-namibia.md
+++ b/_posts/2017/09/2017-09-10-namibia.md
@@ -11,7 +11,7 @@ category: [ "Africa", "Namibia", "PyConNAM", "UNAM"]
 
 After attending this year’s [African Instructors Meetup](https://software-carpentry.org/blog/2017/05/instructor-training-south-africa.html) in Cape Town South Africa, Jessica Upani and Gabriel Nhinda from Namibia started laying the groundwork for another Software Carpentry workshop for Namibia. The [previous workshop](https://docs.google.com/document/d/1bQadFk4ZmAJ-hhOQ6zym5oZJ_LJnuJ26sWEqa8E64hE/pub) took place about a year ago as part of a [12-month programme to build computing capacity in Africa](https://figshare.com/articles/A_Programme_for_the_Development_of_Computational_and_Digital_Research_Capacity_in_South_Africa_and_Africa_-_phase_1/3382168). This year however, the workshop was initiated, organised and taught by exclusively local instructors and helpers, Gabriel and Jessica with assistance from Ruber. 
 
-The workshop ran on [18 – 19 August 2017](https://shingapi.github.io/2017-08-18-Windhoek/) at the University of Namibia, at the Main Campus in Windhoek, Namibia. About four days before the workshop, 30 people (including instructors and helper) had signed up and we closed the online registration form. The the Associate Dean of the School of Computing at UNAM provided support by making a venue available for the event and catering was sponsored by Talarify.
+The workshop ran on [18 – 19 August 2017](https://shingapi.github.io/2017-08-18-Windhoek/) at the University of Namibia, at the Main Campus in Windhoek, Namibia. About four days before the workshop, 30 people (including instructors and helper) had signed up and we closed the online registration form. The Associate Dean of the School of Computing at UNAM provided support by making a venue available for the event and catering was sponsored by Talarify.
 
 ### Pre-workshop 
 
