--- a/_posts/2017/06/2017-06-17-merger.md
+++ b/_posts/2017/06/2017-06-17-merger.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 authors: ["Karen Cranston", "Rayna Harris", "Kate Hertweck", "Hilmar Lapp"]
-title: "Timeline for the the Data Carpentry & Software Carpentry Reorganization"
+title: "Timeline for the Data Carpentry & Software Carpentry Reorganization"
 date: 2017-06-17
 time: "16:00"
 category: ["Steering Committee", "Community", "Data Carpentry"]
