Fixing post type

--- a/_posts/2018/05/2018-05-07-swc-cac.md
+++ b/_posts/2018/05/2018-05-07-swc-cac.md
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: post
 authors: ["Erin Becker", "Belinda Weaver"]
 teaser: "New Curriculum Advisory Committee for Software Carpentry Lessons"
 title: "Meet the Members of the Software Carpentry CAC"
