styling 'Self-Organised' workshops

--- a/_posts/2017/07/2017-07-10-NASA-2.md
+++ b/_posts/2017/07/2017-07-10-NASA-2.md
@@ -9,10 +9,10 @@ tags: [ "Debriefs", "Workshops"]
 
  On 8-9 June, 2017, Katie Moore, Deputy Data Management Team Lead for the [NASA CERES](https://ceres.larc.nasa.gov/) Science Team, and
  Ryan Avery, Geoinformatics Fellow with the [NASA DEVELOP National Program](https://develop.larc.nasa.gov/),
- ran a self-organized workshop in Hampton, VA.
+ ran a Self-Organised workshop in Hampton, VA.
 
  On 12-13 June, 2017, Kunal Marwaha, a software engineer with Palantir, Kelly Meehan, Geoinformatics Fellow with NASA DEVELOP, and Ryan ran another
- self-organized workshop in Norton, VA.
+ Self-Organised workshop in Norton, VA.
 
  Both workshops focused on building skills in NASA DEVELOP participants, who work on 10-week feasibility projects
  that demonstrate how to apply NASA Earth observations to environmental concerns to enhance
