remove contact page and update relevant links

--- a/pages/404.md
+++ b/pages/404.md
@@ -7,7 +7,7 @@ subheadline: HTTP 404
 Please try to start over on the [home page]({{ site.baseurl }}/),
 or search below.
 if you can't find what you're looking for,
-please [get in touch]({{site.baseurl}}/contact/).
+please [get in touch](https://carpentries.org/contact/).
 
 <div markdown="0">
 {% include google_search %}
