--- a/pages/404.md
+++ b/pages/404.md
@@ -4,9 +4,11 @@ permalink: /404.html
 title: Missing page
 subheadline: HTTP 404
 ---
+
+If you are looking for a blog post, our blog posts have moved to [The Carpentries website](https://carpentries.org/blog/).
+
 Please try to start over on the [home page]({{ site.baseurl }}/),
-or search below.
-if you can't find what you're looking for,
+or search below. If you can't find what you're looking for,
 please [get in touch](https://carpentries.org/contact/).
 
 <div markdown="0">
